// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Notes using deprecated API 1`] = `
<button>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Addons|Notes withNotes 1`] = `
<button>
  Button with notes - check the notes panel for details
</button>
`;

exports[`Storyshots Addons|Notes withNotes rendering imported markdown 1`] = `
<button>
  Button with notes - check the notes panel for details
</button>
`;

exports[`Storyshots Addons|Notes withNotes rendering inline, github-flavored markdown 1`] = `
<button>
  Button with notes from inline github-flavored markdown - check the notes panel for details
</button>
`;
